Add some voice over improvements
- input accessory views
- find and replace view
- reading themes popover

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -338,9 +338,65 @@
 "editing-welcome-impartial-tone-title" = "Write in an impartial tone";
 "editing-welcome-set-knowledge-free-subtitle" = "In order to give everyone access to the world’s knowledge, we need you to participate in its creation by reading, editing, and contributing to the topics that matter most to you.";
 "editing-welcome-set-knowledge-free-title" = "Set knowledge free";
+"editor-edit-published" = "Your edit was published.";
+"editor-edit-source" = "Edit source";
 "editor-exit-confirmation-body" = "Are you sure you want to leave editing mode without publishing first?";
 "editor-exit-confirmation-message" = "Are you sure you want to discard this edit?";
 "editor-exit-confirmation-title" = "Dismiss the editing mode?";
+"editor-find-clear-button-accessibility" = "Clear find";
+"editor-find-close-button-accessibility" = "Close find";
+"editor-find-current-match-info-accessibility" = "$1 total matches found. Highlighted match number $2";
+"editor-find-current-match-info-zero-results-accessibility" = "No matches found";
+"editor-find-next-button-accessibility" = "Next find result";
+"editor-find-previous-button-accessibility" = "Previous find result";
+"editor-find-textfield-accessibility" = "Find";
+"editor-keyboard-bold-accessibility" = "Bold";
+"editor-keyboard-close-text-format-menu-accessibility" = "Close text formatting menu";
+"editor-keyboard-comment-accessibility" = "Comment";
+"editor-keyboard-heading-button" = "Heading";
+"editor-keyboard-indent-decrease-accessibility" = "Decrease indent";
+"editor-keyboard-indent-increase-accessibility" = "Increase indent";
+"editor-keyboard-italics-accessibility" = "Italics";
+"editor-keyboard-link-accessibility" = "Link";
+"editor-keyboard-list-ordered-accessibility" = "Ordered list";
+"editor-keyboard-list-unordered-accessibility" = "Unordered list";
+"editor-keyboard-paragraph-button" = "Paragraph";
+"editor-keyboard-reference-accessibility" = "Reference";
+"editor-keyboard-strikethrough-accessibility" = "Strikethrough";
+"editor-keyboard-subheading1-button" = "Subheading 1";
+"editor-keyboard-subheading2-button" = "Subheading 2";
+"editor-keyboard-subheading3-button" = "Subheading 3";
+"editor-keyboard-subheading4-button" = "Subheading 4";
+"editor-keyboard-subscript-accessibility" = "Subscript";
+"editor-keyboard-superscript-accessibility" = "Superscript";
+"editor-keyboard-template-accessibility" = "Template";
+"editor-keyboard-text-formatting-title" = "Text Formatting";
+"editor-keyboard-underline-accessibility" = "Underline";
+"editor-replace-button-format-accessibility" = "Perform replace operation. Replace type is set to $1.";
+"editor-replace-clear-button-accessibility" = "Clear replace";
+"editor-replace-textfield-accessibility" = "Replace";
+"editor-replace-textfield-placeholder" = "Replace with...";
+"editor-replace-type-all" = "Replace all";
+"editor-replace-type-all-accessibility" = "Replace all instances";
+"editor-replace-type-button-accessibility" = "Switch replace type. Currently set to $1. Select to change.";
+"editor-replace-type-single" = "Replace";
+"editor-replace-type-single-accessibility" = "Replace single instance";
+"editor-toolbar-bold-accessibility" = "Bold text formatting";
+"editor-toolbar-cursor-down-accessibility" = "Move cursor down to next line.";
+"editor-toolbar-cursor-next-accessibility" = "Move cursor to next character.";
+"editor-toolbar-cursor-previous-accessibility" = "Move cursor to previous character.";
+"editor-toolbar-cursor-up-accessibility" = "Move cursor up to previous line.";
+"editor-toolbar-find-accessibility" = "Find in page";
+"editor-toolbar-image-accessibility" = "Image text formatting";
+"editor-toolbar-indent-decrease-accessibility" = "Decrease indent text formatting";
+"editor-toolbar-indent-increase-accessibility" = "Increase indent text formatting";
+"editor-toolbar-italics-accessibility" = "Italics text formatting";
+"editor-toolbar-link-accessibility" = "Link text formatting";
+"editor-toolbar-list-ordered-accessibility" = "Ordered list text formatting";
+"editor-toolbar-list-unordered-accessibility" = "Unordered list text formatting";
+"editor-toolbar-open-text-format-menu-accessibility" = "Open text formatting menu";
+"editor-toolbar-reference-accessibility" = "Reference text formatting";
+"editor-toolbar-template-accessibility" = "Template text formatting";
 "empty-diff-compare-title" = "No differences between revisions";
 "empty-diff-single-title" = "No viewable changes made";
 "empty-insert-media-title" = "Select a file from Wikimedia Commons";
@@ -1001,68 +1057,6 @@
 "share-social-mention-format" = "“$1” via Wikipedia: $2";
 "sort-by-recently-added-action" = "Recently added";
 "sort-by-title-action" = "Title";
-"source-editor-accessibility-label-bold" = "Add bold formatting";
-"source-editor-accessibility-label-bold-selected" = "Remove bold formatting";
-"source-editor-accessibility-label-citation" = "Add reference syntax";
-"source-editor-accessibility-label-citation-selected" = "Remove reference syntax";
-"source-editor-accessibility-label-clear-formatting" = "Clear formatting";
-"source-editor-accessibility-label-close-header-select" = "Close text style menu";
-"source-editor-accessibility-label-close-main-input" = "Close text formatting menu";
-"source-editor-accessibility-label-comment" = "Add comment syntax";
-"source-editor-accessibility-label-comment-selected" = "Remove comment syntax";
-"source-editor-accessibility-label-cursor-down" = "Move cursor down";
-"source-editor-accessibility-label-cursor-left" = "Move cursor left";
-"source-editor-accessibility-label-cursor-right" = "Move cursor right";
-"source-editor-accessibility-label-cursor-up" = "Move cursor up";
-"source-editor-accessibility-label-find" = "Find in page";
-"source-editor-accessibility-label-find-button-clear" = "Clear find";
-"source-editor-accessibility-label-find-button-close" = "Close find";
-"source-editor-accessibility-label-find-button-next" = "Next find result";
-"source-editor-accessibility-label-find-button-prev" = "Previous find result";
-"source-editor-accessibility-label-find-text-field" = "Find";
-"source-editor-accessibility-label-format-text" = "Show text formatting menu";
-"source-editor-accessibility-label-format-text-show-more" = "Show text formatting menu";
-"source-editor-accessibility-label-indent-decrease" = "Decrease indent depth";
-"source-editor-accessibility-label-indent-increase" = "Increase indent depth";
-"source-editor-accessibility-label-italics" = "Add italic formatting";
-"source-editor-accessibility-label-italics-selected" = "Remove italic formatting";
-"source-editor-accessibility-label-link" = "Add link syntax";
-"source-editor-accessibility-label-link-selected" = "Remove link syntax";
-"source-editor-accessibility-label-media" = "Insert media";
-"source-editor-accessibility-label-ordered" = "Make current line ordered list";
-"source-editor-accessibility-label-ordered-selected" = "Remove ordered list from current line";
-"source-editor-accessibility-label-replace-button-clear" = "Clear replace";
-"source-editor-accessibility-label-replace-button-perform-format" = "Perform replace operation. Replace type is set to $1";
-"source-editor-accessibility-label-replace-button-switch-format" = "Switch replace type. Currently set to $1. Select to change.";
-"source-editor-accessibility-label-replace-text-field" = "Replace";
-"source-editor-accessibility-label-replace-type-all" = "Replace all instances";
-"source-editor-accessibility-label-replace-type-single" = "Replace single instance";
-"source-editor-accessibility-label-strikethrough" = "Add strikethrough";
-"source-editor-accessibility-label-strikethrough-selected" = "Remove strikethrough";
-"source-editor-accessibility-label-subscript" = "Add subscript formatting";
-"source-editor-accessibility-label-subscript-selected" = "Remove subscript formatting";
-"source-editor-accessibility-label-superscript" = "Add superscript formatting";
-"source-editor-accessibility-label-superscript-selected" = "Remove superscript formatting";
-"source-editor-accessibility-label-template" = "Add template syntax";
-"source-editor-accessibility-label-template-selected" = "Remove template syntax";
-"source-editor-accessibility-label-underline" = "Add underline";
-"source-editor-accessibility-label-underline-selected" = "Remove underline";
-"source-editor-accessibility-label-unordered" = "Make current line unordered list";
-"source-editor-accessibility-label-unordered-selected" = "Remove unordered list from current line";
-"source-editor-clear-formatting" = "Clear formatting";
-"source-editor-edit-published" = "Your edit was published.";
-"source-editor-edit-source" = "Edit source";
-"source-editor-find-replace-all" = "Replace all";
-"source-editor-find-replace-single" = "Replace";
-"source-editor-find-replace-with" = "Replace with...";
-"source-editor-heading" = "Heading";
-"source-editor-paragraph" = "Paragraph";
-"source-editor-style" = "Style";
-"source-editor-subheading1" = "Subheading 1";
-"source-editor-subheading2" = "Subheading 2";
-"source-editor-subheading3" = "Subheading 3";
-"source-editor-subheading4" = "Subheading 4";
-"source-editor-text-formatting" = "Text Formatting";
 "table-of-contents-button-label" = "Table of contents";
 "table-of-contents-close-accessibility-hint" = "Close";
 "table-of-contents-close-accessibility-label" = "Close Table of contents";
