--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -338,9 +338,65 @@
 "editing-welcome-impartial-tone-title" = "Title for editing onboarding screen instructing users to use impartial tone when editing Wikipedia articles";
 "editing-welcome-set-knowledge-free-subtitle" = "Title for editing onboarding screen encouraging users to participate in the creation of Wikipedia content";
 "editing-welcome-set-knowledge-free-title" = "Title for editing onboarding screen encouraging users to participate in the creation of Wikipedia content";
+"editor-edit-published" = "Title for alert informing that the user's new edit was successfully published.";
+"editor-edit-source" = "Title for menu option to edit the source of a page.";
 "editor-exit-confirmation-body" = "Body text of editing mode confirmation alert. Presented to the user when they they are about to be navigated away from the editor flow.";
 "editor-exit-confirmation-message" = "Message text of editing mode confirmation alert. Presented to the user when they they are about to be navigated away from the editor flow.";
 "editor-exit-confirmation-title" = "Title text of editing mode confirmation alert. Presented to the user when they they are about to be navigated away from the editor flow.";
+"editor-find-clear-button-accessibility" = "Accessibility label for the clear find button on the editor. This button clears the text in the find textfield.";
+"editor-find-close-button-accessibility" = "Accessibility label for the close find button on the editor. This button clears out find results and closes the find in page view.";
+"editor-find-current-match-info-accessibility" = "Accessibility text for the match results informational label. $1 is replaced by the total number of matches found. $2 is replaced by which number match is currently highlighted.";
+"editor-find-current-match-info-zero-results-accessibility" = "Accessibility text for zero match results informational label.";
+"editor-find-next-button-accessibility" = "Accessibility label for the find next result on the editor. This button highlights the next find result in the editor text.";
+"editor-find-previous-button-accessibility" = "Accessibility label for the find previous result on the editor. This button highlights the previous find result in the editor text.";
+"editor-find-textfield-accessibility" = "Accessibility label for the find textfield on the editor";
+"editor-keyboard-bold-accessibility" = "Accessibility label for bold keyboard button on the editor.";
+"editor-keyboard-close-text-format-menu-accessibility" = "Accessibility label for close keyboard button on the editor. This button closes the keyboard text formatting menu.";
+"editor-keyboard-comment-accessibility" = "Accessibility label for comment keyboard button on the editor.";
+"editor-keyboard-heading-button" = "Heading button label in the text formatting keyboard view on the editor.";
+"editor-keyboard-indent-decrease-accessibility" = "Accessibility label for decrease indent keyboard button on the editor.";
+"editor-keyboard-indent-increase-accessibility" = "Accessibility label for increase indent keyboard button on the editor.";
+"editor-keyboard-italics-accessibility" = "Accessibility label for italics keyboard button on the editor.";
+"editor-keyboard-link-accessibility" = "Accessibility label for link keyboard button on the editor.";
+"editor-keyboard-list-ordered-accessibility" = "Accessibility label for ordered list keyboard button on the editor.";
+"editor-keyboard-list-unordered-accessibility" = "Accessibility label for unordered list keyboard button on the editor.";
+"editor-keyboard-paragraph-button" = "Paragraph button label in the text formatting keyboard view on the editor.";
+"editor-keyboard-reference-accessibility" = "Accessibility label for reference keyboard button on the editor.";
+"editor-keyboard-strikethrough-accessibility" = "Accessibility label for strikethrough keyboard button on the editor.";
+"editor-keyboard-subheading1-button" = "Subheading1 button label in the text formatting keyboard view on the editor.";
+"editor-keyboard-subheading2-button" = "Subheading2 button label in the text formatting keyboard view on the editor.";
+"editor-keyboard-subheading3-button" = "Subheading3 button label in the text formatting keyboard view on the editor.";
+"editor-keyboard-subheading4-button" = "Subheading4 button label in the text formatting keyboard view on the editor.";
+"editor-keyboard-subscript-accessibility" = "Accessibility label for subscript keyboard button on the editor.";
+"editor-keyboard-superscript-accessibility" = "Accessibility label for superscript keyboard button on the editor.";
+"editor-keyboard-template-accessibility" = "Accessibility label for template keyboard button on the editor.";
+"editor-keyboard-text-formatting-title" = "Title of text formatting keyboard view on the editor.";
+"editor-keyboard-underline-accessibility" = "Accessibility label for underline keyboard button on the editor.";
+"editor-replace-button-format-accessibility" = "Accessibility label for the replace button on the editor. $1 is replaced by the replace type the user has set (single instance or all instances).";
+"editor-replace-clear-button-accessibility" = "Accessibility label for the clear replace button on the editor. This button clears the text in the replace textfield.";
+"editor-replace-textfield-accessibility" = "Accessibility label for the replace textfield on the editor";
+"editor-replace-textfield-placeholder" = "Placeholder label displayed when the replace textfield in the editor's find and replace view is empty.";
+"editor-replace-type-all" = "Label indicating which replace type the user has set in the find and replace view on the editor. This type replaces all instances of the find text.";
+"editor-replace-type-all-accessibility" = "Accessibility text for the replace all instances type on the editor.";
+"editor-replace-type-button-accessibility" = "Accessibility label for the replace type button on the editor. $1 is replaced by the replace type the user has set (single instance or all instances).";
+"editor-replace-type-single" = "Label indicating which replace type the user has set in the find and replace view on the editor. This type replaces a single instance of the find text.";
+"editor-replace-type-single-accessibility" = "Accessibility text for the replace single instance type on the editor.";
+"editor-toolbar-bold-accessibility" = "Accessibility label for bold toolbar button on the editor.";
+"editor-toolbar-cursor-down-accessibility" = "Accessibility label for move cursor down button on the editor. This button moves the cursor down to the next line.";
+"editor-toolbar-cursor-next-accessibility" = "Accessibility label for move cursor next button on the editor. This button moves the cursor to the next character.";
+"editor-toolbar-cursor-previous-accessibility" = "Accessibility label for move cursor down button on the editor. This button moves the cursor to the previous character.";
+"editor-toolbar-cursor-up-accessibility" = "Accessibility label for move cursor up button on the editor. This button moves the cursor up to the previous line.";
+"editor-toolbar-find-accessibility" = "Accessibility label for find toolbar button on the editor. This button opens the find in page view.";
+"editor-toolbar-image-accessibility" = "Accessibility label for image toolbar button on the editor.";
+"editor-toolbar-indent-decrease-accessibility" = "Accessibility label for decrease indent toolbar button on the editor.";
+"editor-toolbar-indent-increase-accessibility" = "Accessibility label for increase indent toolbar button on the editor.";
+"editor-toolbar-italics-accessibility" = "Accessibility label for italics toolbar button on the editor.";
+"editor-toolbar-link-accessibility" = "Accessibility label for link toolbar button on the editor.";
+"editor-toolbar-list-ordered-accessibility" = "Accessibility label for ordered list toolbar button on the editor.";
+"editor-toolbar-list-unordered-accessibility" = "Accessibility label for unordered list toolbar button on the editor.";
+"editor-toolbar-open-text-format-menu-accessibility" = "Accessibility label for text format toolbar button on the editor. This button opens the keyboard text formatting menu.";
+"editor-toolbar-reference-accessibility" = "Accessibility label for reference toolbar button on the editor.";
+"editor-toolbar-template-accessibility" = "Accessibility label for template toolbar button on the editor.";
 "empty-diff-compare-title" = "Text for placeholder label visible when diff comparision between revisions is empty.";
 "empty-diff-single-title" = "Text for placeholder label visible when diff returned for single revision is empty.";
 "empty-insert-media-title" = "Text for placeholder label visible when no file was selected or uploaded";
@@ -893,7 +949,7 @@
 "reading-themes-controls-accessibility-light-theme-button" = "Accessibility label for the light theme button in the Reading Themes Controls popover";
 "reading-themes-controls-accessibility-sepia-theme-button" = "Accessibility label for the sepia theme button in the Reading Themes Controls popover";
 "reading-themes-controls-accessibility-syntax-highlighting-switch" = "Accessibility text for the syntax highlighting toggle in the Reading Themes Controls popover";
-"reading-themes-controls-accessibility-text-size-slider" = "Accessibility label for the text size slider that adjusts article text size.";
+"reading-themes-controls-accessibility-text-size-slider" = "Accessibility label for the text size slider in the Reading Themes Controls popover";
 "reading-themes-controls-syntax-highlighting" = "Text for syntax highlighting label in the Reading Themes Controls popover";
 "reference-section-button-accessibility-label" = "Voiceover label for the top button (that jumps to article's reference section) when viewing a reference's details";
 "reference-title" = "Title shown above reference/citation popover. $1 is replaced with the reference link text - i.e. '[1]' {{Identical|Reference}}";
@@ -1001,68 +1057,6 @@
 "share-social-mention-format" = "Share format string for social platforms with an @mention. $1 is replaced with the article title, $2 is replaced with the article URL.";
 "sort-by-recently-added-action" = "Title of the sort action that allows sorting items by date added.";
 "sort-by-title-action" = "Title of the sort action that allows sorting items by title.";
-"source-editor-accessibility-label-bold" = "Accessibility label for the bold button on the page editor";
-"source-editor-accessibility-label-bold-selected" = "Accessibility label for the selected bold button on the page editor";
-"source-editor-accessibility-label-citation" = "Accessibility label for add reference syntax button on the page editor";
-"source-editor-accessibility-label-citation-selected" = "Accessibility label for remove reference syntax button on the page editor";
-"source-editor-accessibility-label-clear-formatting" = "Accessibility label for the clear formatting button on the page editor";
-"source-editor-accessibility-label-close-header-select" = "Accessibility label for the close text style menu button on the page editor";
-"source-editor-accessibility-label-close-main-input" = "Accessibility label for the close formatting menu button on the page editor";
-"source-editor-accessibility-label-comment" = "Accessibility label for the add comment button on the page editor";
-"source-editor-accessibility-label-comment-selected" = "Accessibility label for the selected comment button on the page editor";
-"source-editor-accessibility-label-cursor-down" = "Accessibility label for the move cursor down button on the page editor";
-"source-editor-accessibility-label-cursor-left" = "Accessibility label for the move cursor left button the page editor";
-"source-editor-accessibility-label-cursor-right" = "Accessibility label for the move cursor right on the page editor";
-"source-editor-accessibility-label-cursor-up" = "Accessibility label for the move cursor up button on the page editor";
-"source-editor-accessibility-label-find" = "Accessibility label for the find in page button on the page editor";
-"source-editor-accessibility-label-find-button-clear" = "Accessibility label for the clear find button on the page editor";
-"source-editor-accessibility-label-find-button-close" = "Accessibility label for the close find button on the page editor";
-"source-editor-accessibility-label-find-button-next" = "Accessibility label for the find next result on the page editor";
-"source-editor-accessibility-label-find-button-prev" = "Accessibility label for the find previous result button on the page editor";
-"source-editor-accessibility-label-find-text-field" = "Accessibility label for the find text field on the page editor";
-"source-editor-accessibility-label-format-text" = "Accessibility label for text formatting menu button on the page editor";
-"source-editor-accessibility-label-format-text-show-more" = "Accessibility label for the show more button on the page editor";
-"source-editor-accessibility-label-indent-decrease" = "Accessibility label for the decrease indent button on the page editor";
-"source-editor-accessibility-label-indent-increase" = "Accessibility label for the increase indent button on the page editor";
-"source-editor-accessibility-label-italics" = "Accessibility label for the italics button on the page editor";
-"source-editor-accessibility-label-italics-selected" = "Accessibility label for the selected italics button on the page editor";
-"source-editor-accessibility-label-link" = "Accessibility label for the add link syntax button on the page editor";
-"source-editor-accessibility-label-link-selected" = "Accessibility label for the remove link syntax button on the page editor";
-"source-editor-accessibility-label-media" = "Accessibility label for the insert media syntax button on the page editor";
-"source-editor-accessibility-label-ordered" = "Accessibility label for make ordered list button on the page editor";
-"source-editor-accessibility-label-ordered-selected" = "accessibility label for remove ordered list button on the page editor";
-"source-editor-accessibility-label-replace-button-clear" = "Accessibility label for the clear replace field button on the page editor";
-"source-editor-accessibility-label-replace-button-perform-format" = "Accessibility label for the perform replace button on the page editor, $1 is replaced by text to replace";
-"source-editor-accessibility-label-replace-button-switch-format" = "Accessibility label for switch format button on page editor, $1 is replaced by text to replace";
-"source-editor-accessibility-label-replace-text-field" = "Accessibility label for the replace text field on the page editor";
-"source-editor-accessibility-label-replace-type-all" = "Accessibility label for the replace all instances button on the page editor";
-"source-editor-accessibility-label-replace-type-single" = "Accessibility label for replace single instance button on the page editor";
-"source-editor-accessibility-label-strikethrough" = "Accessibility label for the strikethrough button on the page editor";
-"source-editor-accessibility-label-strikethrough-selected" = "Accessibility label for the selected strikethrough button on the page editor";
-"source-editor-accessibility-label-subscript" = "Accessibility label for the subscript button on the page editor";
-"source-editor-accessibility-label-subscript-selected" = "Accessibility label for the selected subscript button on the page editor";
-"source-editor-accessibility-label-superscript" = "Accessibility label for the superscript button on the page editor";
-"source-editor-accessibility-label-superscript-selected" = "Accessibility string for the selected superscript button on the page editor";
-"source-editor-accessibility-label-template" = "Accessibility label for the add template syntax button on the page editor";
-"source-editor-accessibility-label-template-selected" = "Accessibility label for the remove template syntax button on the page editor";
-"source-editor-accessibility-label-underline" = "Accessibility label for the underline button on the page editor";
-"source-editor-accessibility-label-underline-selected" = "Accessibility label for the selected underline button on the page editor";
-"source-editor-accessibility-label-unordered" = "Accessibility label for make unordered list button on the page editor";
-"source-editor-accessibility-label-unordered-selected" = "Accessibility label for remove unordered list button on the page editor";
-"source-editor-clear-formatting" = "Label for clear formatting on the page editor";
-"source-editor-edit-published" = "Title for alert informing that the user's new edit was successfully published.";
-"source-editor-edit-source" = "Title for menu option to edit the source of a page.";
-"source-editor-find-replace-all" = "Label for replace all ocurrences of a string on the page editor";
-"source-editor-find-replace-single" = "Label for replace single string button on page editor";
-"source-editor-find-replace-with" = "Lable for replace with string button on page editor";
-"source-editor-heading" = "Label for heading formatting button on section editor";
-"source-editor-paragraph" = "Label for paragraph formatting button on the page editor";
-"source-editor-style" = "Label for style formatting section on the page editor";
-"source-editor-subheading1" = "Label for subheading 1 formatting button on the page editor";
-"source-editor-subheading2" = "Label for subheading 2 formatting button on the page editor";
-"source-editor-subheading3" = "Label for subheading 3 formatting button on the page editor";
-"source-editor-subheading4" = "Label for subheading 4 formatting button on the page editor";
-"source-editor-text-formatting" = "Label for text formatting section on the page editor";
 "table-of-contents-button-label" = "Accessibility label for the Table of Contents button {{Identical|Table of contents}}";
 "table-of-contents-close-accessibility-hint" = "Accessibility hint for closing table of contents {{Identical|Close}}";
 "table-of-contents-close-accessibility-label" = "Accessibility label for closing table of contents";
