--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -861,7 +861,7 @@
 "potd-widget-description" = "Text for description of Picture of the day widget displayed when adding to home screen.";
 "potd-widget-title" = "Text for title of Picture of the day widget.";
 "preference-summary-eventlogging-opt-in" = "Description of preference that when checked enables data collection of user behavior.";
-"preference-title-eventlogging-opt-in" = "Title of preference that when checked enables data collection of user behavior.";
+"privacy-policy-title" = "Title for the privacy Policy";
 "project-name-mediawiki" = "Project name for MediaWiki.";
 "project-name-wikibooks" = "Project name for Wikibooks.";
 "project-name-wikidata" = "Project name for Wikidata.";
@@ -1146,6 +1146,7 @@
 "talk-pages-user-groups" = "Title for menu option for information on the user's user groups. Please prioritize for de, ar and zh wikis.";
 "talk-pages-user-logs" = "Title for menu option to consult the user's public logs. Please prioritize for de, ar and zh wikis.";
 "talk-pages-view-title" = "Title of user and article talk pages view. Please prioritize for de, ar and zh wikis.";
+"terms-of-use-title" = "Title for the terms of use";
 "theme-black-display-name" = "Black theme name presented to the user";
 "theme-dark-display-name" = "Dark theme name presented to the user";
 "theme-default-display-name" = "Default theme name presented to the user";
@@ -1253,6 +1254,7 @@
 "watchlist-user-button-user-talk-page" = "Title shown for user talk page action in user menu button in diff and watchlist views.";
 "watchlist-watch-subtitle" = "Watchlists onboarding modal watch articles section subtitle";
 "watchlist-watch-title" = "Watchlists onboarding modal watch articles section title";
+"welcome-data-privacy-title" = "Title for welcome screen explaining data usage in the app";
 "welcome-exploration-explore-feed-description" = "Description for Explore feed";
 "welcome-exploration-explore-feed-title" = "Title for Explore feed";
 "welcome-exploration-on-this-day-description" = "Description for On this day";
@@ -1274,10 +1276,8 @@
 "welcome-notifications-tell-me-more-creation" = "An explanation of how notifications are created";
 "welcome-notifications-tell-me-more-storage" = "An explanation of how notifications are stored";
 "welcome-notifications-tell-me-more-title" = "Title for detailed notification explanation";
-"welcome-send-data-helps-title" = "Title for welcome screen allowing user to opt in to send usage reports";
-"welcome-send-data-learn-more" = "Text for link for learning more about opting-in to anonymous data collection";
-"welcome-send-data-sub-title" = "Sub-title explaining how sending usage reports can help improve the app";
-"welcome-volunteer-send-usage-reports" = "Text for switch allowing user to choose whether to send usage reports";
+"welcome-privacy-subtitle" = "Sub-title explaining how data usage is anonymous";
+"welcome-privacy-terms-button-text" = "Text for links for learning more about data privacy policy and terms of use";
 "widget-onthisday-description" = "Description for 'On this day' view in iOS widget gallery";
 "widget-onthisday-placeholder-article-snippet" = "Placeholder text for On This Day widget: Article description for an article about Wikipedia";
 "widget-onthisday-placeholder-event-snippet" = "Placeholder text for On This Day widget: Event describing launch of Wikipedia";
