Update onboarding copy

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1277,7 +1277,7 @@
 "welcome-notifications-tell-me-more-storage" = "Notification preferences are stored on device and not based on personal information or activity.";
 "welcome-notifications-tell-me-more-title" = "More about notifications";
 "welcome-privacy-subtitle" = "We believe that you should not have to provide personal information to participate in the free knowledge movement. Usage data collected for this app is anonymous.";
-"welcome-privacy-terms-button-text" = "Learn more privacy policy and terms of use";
+"welcome-privacy-terms-button-text" = "Learn more about our privacy policy and terms of use";
 "widget-onthisday-description" = "Explore what happened on this day in history.";
 "widget-onthisday-placeholder-article-snippet" = "Free online encyclopedia that anyone can edit";
 "widget-onthisday-placeholder-event-snippet" = "Wikipedia, a free wiki content encyclopedia, goes online.";
