--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -398,6 +398,7 @@
 "editor-toolbar-reference-accessibility" = "Reference text formatting";
 "editor-toolbar-show-more-accessibility" = "Show more formatting options";
 "editor-toolbar-template-accessibility" = "Template text formatting";
+"editor-wikitext-textview-accessibility" = "Wikitext editor";
 "empty-diff-compare-title" = "No differences between revisions";
 "empty-diff-single-title" = "No viewable changes made";
 "empty-insert-media-title" = "Select a file from Wikimedia Commons";
