Update Diff List cell's accessibility labels.

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -200,10 +200,21 @@
 "description-welcome-promise-title" = "By starting, I promise not to misuse this feature";
 "description-welcome-start-editing-button" = "Start editing";
 "diff-article-revision-history" = "Article revision history";
+"diff-change-added" = "Addition, $1, addition end.";
+"diff-change-paragraph-lines-moved-down" = "Paragraph moved down {{PLURAL:$1|0=0 lines|$1 line|$1 lines}}. Go to new location.";
+"diff-change-paragraph-lines-moved-up" = "Paragraph moved up {{PLURAL:$1|0=0 lines|$1 line|$1 lines}}. Go to new location.";
+"diff-change-paragraph-moved" = "Paragraph moved. Go to previous location.";
+"diff-change-paragraph-sections-moved-down" = "Paragraph moved down {{PLURAL:$1|0=0 sections|$1 section|$1 sections}}. Go to new location.";
+"diff-change-paragraph-sections-moved-up" = "Paragraph moved up {{PLURAL:$1|0=0 sections|$1 section|$1 sections}}. Go to new location.";
+"diff-change-removal" = "Removal, $1, removal end.";
 "diff-compare-header-from-info-heading" = "Previous Edit";
 "diff-compare-header-heading" = "Compare Revisions";
 "diff-compare-header-to-info-heading" = "Displayed Edit";
 "diff-compare-title" = "Compare Revisions";
+"diff-content-added" = "Content added, $1";
+"diff-content-removed" = "Content removed, $1";
+"diff-context-cell-collapse-section" = "Collapse $1";
+"diff-context-cell-expand-section" = "Expand $1";
 "diff-context-lines-collapsed-button-title" = "Show";
 "diff-context-lines-expanded-button-title" = "Hide";
 "diff-header-revision-accessibility-text" = "Revision made at";
@@ -235,6 +246,7 @@
 "diff-thanks-sent" = "Your 'Thanks' was sent to $1";
 "diff-thanks-sent-already" = "You’ve already sent a ‘Thanks’ for this edit";
 "diff-thanks-sent-cannot-unsend" = "Thanks cannot be unsent";
+"diff-unchanged-contextual-line" = "Contextual line, unchanged: $1";
 "diff-undo-message" = "This will undo the changes made by the revisions(s) of the article shown here. To continue, please provide a reason for undoing this edit.";
 "diff-undo-success" = "The revision was undone.";
 "diff-unedited-lines-format" = "{{PLURAL:$1|$1 line unedited|$1 lines unedited}}";
