--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -200,10 +200,21 @@
 "description-welcome-promise-title" = "Title text asking user to edit descriptions responsibly";
 "description-welcome-start-editing-button" = "Text for button for dismissing description editing welcome screens";
 "diff-article-revision-history" = "Label for article edit history menu item in diff more menu.";
+"diff-change-added" = "Accessibility text announced in VoiceOver when content additions are announced in a diff. $1 is replaced with the added content.";
+"diff-change-paragraph-lines-moved-down" = "Accessibility text announced in VoiceOver to indicate content has moved. $1 is replaced by the number of lines.";
+"diff-change-paragraph-lines-moved-up" = "Accessibility text announced in VoiceOver to indicate content has moved. $1 is replaced by the number of lines.";
+"diff-change-paragraph-moved" = "Accessibility text announced in VoiceOver to indicate content has moved.";
+"diff-change-paragraph-sections-moved-down" = "Accessibility text announced in VoiceOver to indicate content has moved. $1 is replaced by the number of sections.";
+"diff-change-paragraph-sections-moved-up" = "Accessibility text announced in VoiceOver to indicate content has moved. $1 is replaced by the number of sections.";
+"diff-change-removal" = "Accessibility text announced in VoiceOver when content removals are announced in a diff. $1 is replaced with the removed content.";
 "diff-compare-header-from-info-heading" = "Heading label in info box for previous revision when comparing two revisions.";
 "diff-compare-header-heading" = "Heading label in header when comparing two revisions.";
 "diff-compare-header-to-info-heading" = "Heading label in info box for current revision when comparing two revisions.";
 "diff-compare-title" = "Title label that shows in the navigation bar when scrolling and comparing revisions.";
+"diff-content-added" = "Accessibility text announced in VoiceOver before new line content additions are announced in a diff. $1 is replaced with the new content.";
+"diff-content-removed" = "Accessibility text announced in VoiceOver before content line removals are announced in a diff. $1 is replaced with the removed content.";
+"diff-context-cell-collapse-section" = "Text read by VoiceOver in diffs that indicates the line numbers that tapping the button with collapse from being displayed. $1 is replaced with the line number range (i.e. Lines 3-10).";
+"diff-context-cell-expand-section" = "Text read by VoiceOver in diffs that indicates the line numbers that tapping the button with expand to display. $1 is replaced with a string the line numbers range (i.e. Lines 3-10).";
 "diff-context-lines-collapsed-button-title" = "Expand button title in diff compare context section when section is in collapsed state.";
 "diff-context-lines-expanded-button-title" = "Expand button title in diff compare context section when section is in expanded state.";
 "diff-header-revision-accessibility-text" = "Accessibility text to provide more context to users of assistive tecnologies about the revision date";
@@ -235,6 +246,7 @@
 "diff-thanks-sent" = "Message indicating thanks was sent. Parameters:\n* $1 - name of user who was thanked";
 "diff-thanks-sent-already" = "Message indicating thanks was already sent";
 "diff-thanks-sent-cannot-unsend" = "Message indicating thanks cannot be unsent";
+"diff-unchanged-contextual-line" = "Text read by VoiceOver in diffs that indicates information about the forthcoming content. $1 will be replaced with that content.";
 "diff-undo-message" = "Message showed in alert when user taps undo in diff toolbar.";
 "diff-undo-success" = "Success message shown to user when they successfully undid an edit.";
 "diff-unedited-lines-format" = "Label in diff to indicate how many lines are not displayed because they were not changed. $1 is replaced by the number of unedited lines.";
