--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -472,7 +472,8 @@
 "explore-feed-preferences-show-related-pages-title" = "Show Because you read card";
 "explore-feed-preferences-show-top-read-footer-text" = "Turning off the Top read card will turn the card off in all available languages.";
 "explore-feed-preferences-show-top-read-title" = "Show Top read card";
-"explore-feed-preferences-suggested-edits-description" = "Suggested Edits";
+"explore-feed-preferences-suggested-edits-description" = "Suggestions to add content to Wikipedia";
+"explore-feed-preferences-suggested-edits-title" = "Show Suggested edits card";
 "explore-feed-preferences-top-read-description" = "Daily most read articles";
 "explore-feed-preferences-turn-off-explore-feed-alert-action-title" = "Turn off Explore feed";
 "explore-feed-preferences-turn-off-explore-feed-alert-message" = "Hiding all Explore feed cards will turn off the Explore tab and replace it with a Settings tab";
@@ -1062,7 +1063,7 @@
 "share-social-mention-format" = "“$1” via Wikipedia: $2";
 "sort-by-recently-added-action" = "Recently added";
 "sort-by-title-action" = "Title";
-"suggested-edits-feed-card-title" = "Suggested Edits";
+"suggested-edits-title" = "Suggested Edits";
 "table-of-contents-button-label" = "Table of contents";
 "table-of-contents-close-accessibility-hint" = "Close";
 "table-of-contents-close-accessibility-label" = "Close Table of contents";
