--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -588,6 +588,14 @@
 "icon-shortcut-random-title" = "Title for app icon force touch shortcut to quickly open a random article. {{Identical|Random article}}";
 "icon-shortcut-search-title" = "Title for app icon force touch shortcut to quickly open the search interface.";
 "image-gallery-unknown-owner" = "Fallback text for when an item in the image gallery doesn't have a specified owner.";
+"image-rec-onboarding-item-1-body" = "Body of first item in onboarding view displayed when user first visits image recommendations feature view.";
+"image-rec-onboarding-item-1-title" = "Title of first item in onboarding view displayed when user first visits image recommendations feature view.";
+"image-rec-onboarding-item-2-body" = "Body of second item in onboarding view displayed when user first visits image recommendations feature view.";
+"image-rec-onboarding-item-2-title" = "Title of second item in onboarding view displayed when user first visits image recommendations feature view.";
+"image-rec-onboarding-item-3-body" = "Body of third item in onboarding view displayed when user first visits image recommendations feature view.";
+"image-rec-onboarding-item-3-title" = "Title of third item in onboarding view displayed when user first visits image recommendations feature view.";
+"image-rec-onboarding-learn-more-button" = "Title of learn more button in onboarding view displayed when user first visits image recommendations feature view.";
+"image-rec-onboarding-title" = "Title of onboarding view displayed when user first visits image recommendations feature view.";
 "image-rec-title" = "Title of the image recommendation view. Displayed in the navigation bar above an article summary.";
 "image-rec-view-article" = "Button from an image recommendation article summary. Tapping the button displays the full article.";
 "import-shared-reading-list-default-title" = "Default title of a reading list imported through a shared link.";
