Update repeating localized string keys

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1154,7 +1154,8 @@
 "talk-pages-topic-added-alert-title" = "Your topic was added";
 "talk-pages-topic-compose-body-placeholder" = "Description";
 "talk-pages-topic-compose-body-placeholder-accessibility" = "Topic description";
-"talk-pages-topic-compose-close-confirmation-discard" = "Discard Reply";
+"talk-pages-topic-compose-close-confirmation-discard-reply" = "Discard Reply";
+"talk-pages-topic-compose-close-confirmation-discard-topic" = "Discard Topic";
 "talk-pages-topic-compose-close-confirmation-title" = "Are you sure you want to discard this new topic?";
 "talk-pages-topic-compose-navbar-title" = "Topic";
 "talk-pages-topic-compose-title-placeholder" = "Topic title";
